--- a/index.html
+++ b/index.html
@@ -1,1 +1,31 @@
-# liorazi.github.io
+<title>Roi Tochner</title>
+
+<head>
+    <title>Roi Tochner</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-title" content="Roi Tochner">
+    <meta name="format-detection" content="telephone=no">
+    
+	<meta property="og:description" content="Digital Business Card" />
+	<meta property="og:image" content="https://dl.dropboxusercontent.com/u/2483446/152_Icon.png" />
+	<meta property="og:url" content="http://card.djtochner.com/he/index.html" />
+	<meta property="og:type" content="website" />
+	
+    <meta http-equiv="refresh" content="0; URL='he/index.html'" />
+    
+     <link rel="apple-touch-icon" href="https://dl.dropboxusercontent.com/u/2483446/60_Icon.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="https://dl.dropboxusercontent.com/u/2483446/76_Icon.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="https://dl.dropboxusercontent.com/u/2483446/120_Icon.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="https://dl.dropboxusercontent.com/u/2483446/152_Icon.png">
+    <link rel="apple-touch-icon" sizes="87x87" href="https://dl.dropboxusercontent.com/u/2483446/87_Icon.png">
+    <link rel="apple-touch-icon" sizes="58x58" href="https://dl.dropboxusercontent.com/u/2483446/58_Icon.png">
+
+</head>
+
+<body>
+    <script>
+    </script>
+</body>
