--- a/instructions.html
+++ b/instructions.html
@@ -1,33 +1,7 @@
 
-<!DOCTYPE html><!-- Last Published: Wed Sep 26 2018 16:48:39 GMT+0000 (UTC) --><html data-wf-domain="www.momentogifs.com" data-wf-page="5844380541f198a449e1caa0" data-wf-site="581605d914dd97ef54e2bcbd"><head><meta charset="utf-8"/><title>User Agreement</title><meta content="User Agreement" property="og:title"/><meta content="width=device-width, initial-scale=1" name="viewport"/><link href="https://uploads-ssl.webflow.com/581605d914dd97ef54e2bcbd/css/momentogifs.webflow.bce0a1d36.min.css" rel="stylesheet" type="text/css"/><!--[if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif]--><script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script><link href="https://daks2k3a4ib2z.cloudfront.net/581605d914dd97ef54e2bcbd/59f72d39eac5ea0001c1cd09_Icon-20%402x.png" rel="shortcut icon" type="image/x-icon"/><link href="https://daks2k3a4ib2z.cloudfront.net/581605d914dd97ef54e2bcbd/59f72d56d68a760001698c25_Icon-1024.png" rel="apple-touch-icon"/><script type="text/javascript">var _gaq = _gaq || [];_gaq.push(['_setAccount', 'UA-86213621-1'], ['_trackPageview']);(function() {  var ga = document.createElement('script');  ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';  var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);})();</script><meta property="og:title" content="Momento - Make Amazing GIFs in Seconds" />
-<meta property="og:description" content="Momento automagically turns your photos into unforgettable GIFs." />
-<meta property="og:image" content="https://view.momentogifs.com/images/share.png" />
-<meta property="og:url" content="https://www.momentogifs.com" />
-
-<meta name="twitter:card" content="app">
-<meta name="twitter:site" content="@MomentoGIFs">
-<meta name="twitter:description" content="Momento automagically turns your photos into unforgettable GIFs.">
-<meta name="twitter:app:country" content="US">
-<meta name="twitter:app:name:iphone" content="Momento - Make Amazing GIFs in Seconds">
-<meta name="twitter:app:id:iphone" content="1172709468">
-    
-<meta property="fb:app_id" content="1194291937295147">
-
-<!-- Facebook Pixel Code -->
-<script>
-!function(f,b,e,v,n,t,s){if(f.fbq)return;n=f.fbq=function(){n.callMethod?
-n.callMethod.apply(n,arguments):n.queue.push(arguments)};if(!f._fbq)f._fbq=n;
-n.push=n;n.loaded=!0;n.version='2.0';n.queue=[];t=b.createElement(e);t.async=!0;
-t.src=v;s=b.getElementsByTagName(e)[0];s.parentNode.insertBefore(t,s)}(window,
-document,'script','https://connect.facebook.net/en_US/fbevents.js');
-fbq('init', '702273589937189');
-fbq('track', 'PageView');
-</script>
-<noscript><img height="1" width="1" style="display:none"
-src="https://www.facebook.com/tr?id=702273589937189&ev=PageView&noscript=1"
-/></noscript>
-<!-- DO NOT MODIFY -->
-<!-- End Facebook Pixel Code --></head><body><div class="container w-container"><div class="w-richtext"><h2>User Agreement</h2><p><strong>Last updated: March 11, 2018</strong></p><h3><strong>In
+<!DOCTYPE html><html><head><meta charset="utf-8"/><title>User Agreement</title><meta content="User Agreement" property="og:title"/><meta content="width=device-width, initial-scale=1" name="viewport"/><link href="https://uploads-ssl.webflow.com/581605d914dd97ef54e2bcbd/css/momentogifs.webflow.bce0a1d36.min.css" rel="stylesheet" type="text/css"/></script><meta property="og:title" content="תג נכה" />
+<meta property="og:description" content="תג נכה - בדיקת זכאות תג נכה למספר רכב" />
+</head><body><div class="container w-container"><div class="w-richtext"><h2>Instructions</h2><p><strong>Last updated: March 11, 2018</strong></p><h3><strong>In
 short</strong></h3><p>The following key points of this User Agreement are only brought for Your
 convenience. <strong>These key points do not substitute the full User Agreement.</strong></p><p>• <strong>Introduction.</strong> Momento provides a
 mobile platform that enable users to create, produce and share short visual
