--- a/info.html
+++ b/info.html
@@ -1,7 +1,7 @@
 
 <!DOCTYPE html><html><head><meta charset="utf-8"/><title>User Agreement</title><meta content="User Agreement" property="og:title"/><meta content="width=device-width, initial-scale=1" name="viewport"/><link href="https://uploads-ssl.webflow.com/581605d914dd97ef54e2bcbd/css/momentogifs.webflow.bce0a1d36.min.css" rel="stylesheet" type="text/css"/></script><meta property="og:title" content="תג נכה" />
 <meta property="og:description" content="תג נכה - בדיקת זכאות תג נכה למספר רכב" />
-</head><body><div class="container w-container"><div class="w-richtext"><h2>About</h2><p><strong>Last updated: March 11, 2018</strong></p><h3><strong>In
+</head><body><div class="container w-container"><div class="w-richtext"><h2>Info</h2><p><strong>Last updated: March 11, 2018</strong></p><h3><strong>In
 short</strong></h3><p>The following key points of this User Agreement are only brought for Your
 convenience. <strong>These key points do not substitute the full User Agreement.</strong></p><p>• <strong>Introduction.</strong> Momento provides a
 mobile platform that enable users to create, produce and share short visual
