--- a/tos.html
+++ b/tos.html
@@ -32,4 +32,4 @@
 <p><strong>9.סמכות שיפוט וברירת הדין</strong><p>
 סמכות השיפוט הבלעדית לדון בכל מחלוקת ו/או סכסוך בקשר עם האפליקציה ו/או תנאי השימוש, תהא נתונה לבית המשפט המוסמך במחוז תל אביב, ישראל. הדין החל על כל מחלוקת וסכסוך כאמור בקשר עם האפליקציה הנו הדין הישראלי בלבד.
 <p><strong>10. פנייה לחברה</strong><p>
-בכל שאלה ו/או בקשה בקשר לאפליקציה ותנאי השימוש לרבות מדיניות הפרטיות, תוכל/י לפנות אלינו במייל: helpdisabledpermit@gmail.com
+בכל שאלה ו/או בקשה בקשר לאפליקציה ותנאי השימוש לרבות מדיניות הפרטיות, תוכל/י לפנות אלינו במייל: <a href="mailto:helpdisabledpermit@gmail.com">helpdisabledpermit@gmail.com</a>
