--- a/acknowledgements.html
+++ b/acknowledgements.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html><html><head><meta charset="utf-8"/><title>Acknowledgments</title><meta content="Acknowledgments" property="og:title"/><meta content="width=device-width, initial-scale=1" name="viewport"/><link href="https://liorazi.github.io/webflow.bce0a1d36.min.css" rel="stylesheet" type="text/css"/></script><meta property="og:title" content="תג נכה" />
 <meta property="og:description" content="תג נכה - בדיקת זכאות תג נכה למספר רכב" />
 </head><body><div class="container w-container"><div class="w-richtext"><h2>Acknowledgments</h2><p><strong>Last updated: Oct 6, 2018</strong></p><p><br>Portions of this software may utilize the following copyrighted material, the use of which is hereby acknowledged:</p>
-<p><p>• <strong>CSVImporter</strong> <br>The MIT License
+<p><p><strong>CSVImporter</strong> <br>The MIT License
 <p>
 Copyright (c) 2015-2018 Flinesoft
 <p>
@@ -23,7 +23,7 @@ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
 LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
 OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
 THE SOFTWARE.<p>
-  <p>• <strong>QuickTableViewController</strong> <br>The MIT License (MIT)
+  <p><strong>QuickTableViewController</strong> <br>The MIT License (MIT)
   <p>
   Copyright (c) 2015 bcylin
   <p>
@@ -45,7 +45,7 @@ THE SOFTWARE.<p>
   OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
   SOFTWARE.<p>
     <p>
-      <p>• <strong>SwiftWebVC</strong> <br>The MIT License (MIT)
+      <p><strong>SwiftWebVC</strong> <br>The MIT License (MIT)
       <p>
         Copyright (c) 2016 Myles Ringle
       <p>
@@ -67,7 +67,7 @@ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
 OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
 THE SOFTWARE.<p>
   <p>
-    <p>• <strong>SwiftSpinner</strong> <br>The MIT License (MIT)
+    <p><strong>SwiftSpinner</strong> <br>The MIT License (MIT)
     <p>
       Copyright (c) 2015 Marin Todorov <touch-code-magazine@underplot.com>
     <p>
@@ -88,7 +88,7 @@ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
 LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
 OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
 THE SOFTWARE.<p>
-  <p>• <strong>Cache</strong> <br>Licensed under the MIT license
+  <p><strong>Cache</strong> <br>Licensed under the MIT license
   <p>
     Copyright (c) 2015 Hyper Interaktiv AS
   <p>
