--- a/instructions.html
+++ b/instructions.html
@@ -1,5 +1,5 @@
 
-<!DOCTYPE html><html dir=rtl><head><meta charset="utf-8"/><title>רוצה לדווח, למי לפנות?</title><meta content="רוצה לדווח, למי לפנות?" property="og:title"/><meta content="width=device-width, initial-scale=1" name="viewport"/><link href="https://liorazi.github.io/webflow.bce0a1d36.min.css" rel="stylesheet" type="text/css"/></script><meta property="og:title" content="תג נכה" />
+<!DOCTYPE html><html dir=rtl><head><meta charset="utf-8"/><title></title><meta content="רוצה לדווח, למי לפנות?" property="og:title"/><meta content="width=device-width, initial-scale=1" name="viewport"/><link href="https://liorazi.github.io/webflow.bce0a1d36.min.css" rel="stylesheet" type="text/css"/></script><meta property="og:title" content="תג נכה" />
 <meta property="og:description" content="תג נכה - בדיקת זכאות תג נכה למספר רכב" />
 </head><body><div class="container w-container"><div class="w-richtext"><h2>למי לפנות?</h2>
 <p>מצאת כי ישנו רכב אשר עומד/חונה במקום של חניית נכה, וזאת לאחר בדיקה דרך אפליקציית ״תג נכה״ כי למספר הרכב אין תג נכה בתוקף:<p>
