--- a/privacy.html
+++ b/privacy.html
@@ -1,5 +1,5 @@
 
-<!DOCTYPE html><html dir="rtl" ><head><meta charset="utf-8"/><title>מדיניות פרטיות</title><meta content="Privacy Agreement" property="og:title"/><meta content="width=device-width, initial-scale=1" name="viewport"/><link href="https://liorazi.github.io/webflow.bce0a1d36.min.css" rel="stylesheet" type="text/css"/></script><meta property="og:title" content="תג נכה" />
+<!DOCTYPE html><html dir="rtl" ><head><meta charset="utf-8"/><title></title><meta content="מדיניות פרטיות" property="og:title"/><meta content="width=device-width, initial-scale=1" name="viewport"/><link href="https://liorazi.github.io/webflow.bce0a1d36.min.css" rel="stylesheet" type="text/css"/></script><meta property="og:title" content="תג נכה" />
 <meta property="og:description" content="תג נכה - בדיקת זכאות תג נכה למספר רכב" />
 </head><body><div class="container w-container"><div class="w-richtext"><h2>מדיניות פרטיות</h2><p><strong>עודכן לאחרונה: 6 לאוקטובר, 2018</strong></p><p><br><strong>1. מדיניות הפרטיות של תג נכה</strong>
 <p>1.1 תג נכה (להלן: “אנו” או “אנחנו”) מחויבת להגן ולכבד את פרטיותך, כמשתמש, מתקשר, מבקר או המוסר מידע לתג נכה.
