--- a/acknowledgements.html
+++ b/acknowledgements.html
@@ -1,5 +1,5 @@
 
-<!DOCTYPE html><html><head><meta charset="utf-8"/><title>Acknowledgments</title><meta content="Acknowledgments" property="og:title"/><meta content="width=device-width, initial-scale=1" name="viewport"/><link href="https://liorazi.github.io/webflow.bce0a1d36.min.css" rel="stylesheet" type="text/css"/></script><meta property="og:title" content="תג נכה" />
+<!DOCTYPE html><html><head><meta charset="utf-8"/><title></title><meta content="Acknowledgments" property="og:title"/><meta content="width=device-width, initial-scale=1" name="viewport"/><link href="https://liorazi.github.io/webflow.bce0a1d36.min.css" rel="stylesheet" type="text/css"/></script><meta property="og:title" content="תג נכה" />
 <meta property="og:description" content="תג נכה - בדיקת זכאות תג נכה למספר רכב" />
 </head><body><div class="container w-container"><div class="w-richtext"><h2>Acknowledgments</h2><p><strong>Last updated: Oct 6, 2018</strong></p><p><br>Portions of this software may utilize the following copyrighted material, the use of which is hereby acknowledged:</p>
 <p><p><strong>DINRundschriftBreit Font</strong> <br>SIL OPEN FONT LICENSE
