--- a/instructions.html
+++ b/instructions.html
@@ -2,11 +2,11 @@
 <!DOCTYPE html><html dir=rtl><head><meta charset="utf-8"/><title></title><meta content="רוצה לדווח, למי לפנות?" property="og:title"/><meta content="width=device-width, initial-scale=1" name="viewport"/><link href="https://liorazi.github.io/webflow.bce0a1d36.min.css" rel="stylesheet" type="text/css"/></script><meta property="og:title" content="תג נכה" />
 <meta property="og:description" content="תג נכה - בדיקת זכאות תג נכה למספר רכב" />
 </head><body><div class="container w-container"><div class="w-richtext"><h2>למי לפנות?</h2>
-<p>מצאת כי ישנו רכב אשר עומד/חונה במקום של חניית נכה, וזאת לאחר בדיקה דרך אפליקציית ״תג נכה״ כי למספר הרכב אין תג נכה בתוקף:<p>
-
-אופציה א׳: פנה למוקד העירוני בעירך - ברוב הערים מספרו 106 למעט: רמת גן - 109, גבעתיים - 107, בת-ים - 107.<p>
-
-אופציה ב׳: פנה למשטרה - מוקד 100<p>
+<p>מצאת כי ישנו רכב אשר עומד/חונה במקום של חניית נכה, וזאת לאחר בדיקה דרך אפליקציית ״תג נכה״ כי למספר הרכב אין תג נכה בתוקף.<p>
+לצורך דווח על המקרה ישנן מספר דרכי פעולה אפשריות:<p>
+  אפשרות א׳: פנה למוקד העירוני בעירך - ברוב הערים מספרו <a href="tel:106">106</a>
+  למעט: רמת גן - <a href="tel:109">109</a>, גבעתיים/בת-ים - <a href="tel:107">107</a><p>
+      אפשרות ב׳: פנה למשטרה - <a href="tel:100">מוקד 100</a><p>
 
 יתכן ותתבקש לספק את הפרטים הבאים:<p>
 <p>•  יצרן הרכב
@@ -16,5 +16,7 @@
 <p>•  תאריך ושעה
 <p>•  תמונה של הרכב חונה בחניית הנכים
 <p>
-<strong>חשוב לדעת!</strong>
+<p> בפנייתך רצוי לציין כי בדקת את מספר הרכב מול מאגר הנתונים של משרד התחבורה
+וכי חנית הנכים תפוסה שלא כדין
+<p><h3><strong>חשוב לדעת!</strong></h3>
 <p>על פי החוק אסורה העמדת רכב שאינו בעל תג נכה בתוקף בחניית נכה אפילו לזמן קצר, קל וחומר החניה בו.<p>
