--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 
-<!DOCTYPE html><html dir="rtl" ><head><meta charset="utf-8"/><title></title><meta content="Privacy Agreement" property="og:title"/><meta content="width=device-width, initial-scale=1" name="viewport"/><link href="https://liorazi.github.io/webflow.bce0a1d36.min.css" rel="stylesheet" type="text/css"/></script><meta property="og:title" content="תג נכה" />
+<!DOCTYPE html><html dir="rtl" ><head><meta http-equiv="refresh" content="0; url=https://www.facebook.com/tagnehe" charset="utf-8"/><title></title><meta content="Privacy Agreement" property="og:title"/><meta content="width=device-width, initial-scale=1" name="viewport"/><link href="https://liorazi.github.io/webflow.bce0a1d36.min.css" rel="stylesheet" type="text/css"/></script><meta property="og:title" content="תג נכה" />
 <meta property="og:description" content="תג נכה - בדיקת זכאות תג נכה למספר רכב" />
 </head><body><div class="container w-container"><div class="w-richtext"><h2>תנאי שימוש</h2><p><strong>עודכן לאחרונה: 6 לאוקטובר, 2018</strong></p>
 <strong>
