changes to template

--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 ---
-title: Urban
+title: Azi Apps
 ---
 
 <section class="hero diagonal">
 	<div class="container">
-		<h2 class="editable">We build websites</h2>
-		<p class="subtext editable">This is the <strong>Urban</strong> template from <a href="http://cloudcannon.com/">CloudCannon</a>. Urban is a strong foundation for the web presence of your agency.</p>
-		<p><a class="button alt" href="{{ site.baseurl }}/contact/">Contact Us</a></p>
+		<h2 class="editable">We build mobile solutions</h2>
+		<p class="subtext editable">Building mobile software solutions for your needs.</p>
+		<!-- <p><a class="button alt" href="{{ site.baseurl }}/contact/">Contact Us</a></p> -->
 	</div>
 </section>
 
@@ -31,13 +31,13 @@ title: Urban
 	<div class="container halves">
 		<div>
 			<ul class="image-list">
-				<li><img src="{{ site.baseurl }}/images/cloudcannon-logo-blue.svg" width="250" style="margin-bottom: 40px;"></li>
-				<li><img src="{{ site.baseurl }}/images/jekyll-logo-black-red-transparent.png" width="300"></li>
+				<li><img src="{{ site.baseurl }}/images/xcode_logo.svg" width="200" style="margin-bottom: 40px;"></li>
+				<li><img src="{{ site.baseurl }}/images/ar_logo.png" width="150"></li>
 			</ul>
 		</div>
 		<div>
-			<h3 class="editable">Latest software, greatest perfomance</h3>
-			<p class="editable">As a new agency we get reap the benefits of the latest and greatest. We build our websites with the most up to date technology. This ensures your website is fast, efficient and reliable for many years.</p>
+			<h3 class="editable">Latest technology, greatest performance</h3>
+			<p class="editable">We build our products with the most up to date technology. This ensures your app is fast, efficient and reliable for a long period.</p>
 		</div>
 	</div>
 </section>
