--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@ map:
 <section class="diagonal">
 	<div class="container">
 		<form action="{{ site.baseurl }}/contact-success/" method="post" class="contact-form">
-			<input type="hidden" name="_to" value="support@example.com" />
+			<input type="hidden" name="_to" value="support@azi.app" />
 			<input type="text" name="_gotcha" style="display: none;" />
 
 			<div class="halves">
@@ -38,16 +38,8 @@ map:
 	</div>
 </section>
 
-<section class="diagonal map">
-	<div id="gmap_canvas"></div>
-</section>
-
 <section class="diagonal">
 	<div class="container halves aligned-top">
-		<div>
-			<h3>Address</h3>
-				<address><a target="_blank" href="https://www.google.com/maps/place/{{ page.map.address | url_encode }}">{{ page.map.address | replace: ", ", ", <br>" }}</a></address>
-		</div>
 		<div>
 			<h3>Email</h3>
 			<p><a href="mailto:{{ site.data.company.contact_email_address }}">{{ site.data.company.contact_email_address }}</a></p>
