removed About from footer

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ title: Azi Apps
 <section class="hero diagonal">
 	<div class="container">
 		<h2 class="editable">We build mobile solutions</h2>
-		<p class="subtext editable">Building mobile software solutions for your needs.</p>
+		<p class="subtext editable">Building innovative mobile solutions for your needs.</p>
 		<!-- <p><a class="button alt" href="{{ site.baseurl }}/contact/">Contact Us</a></p> -->
 	</div>
 </section>
