update index html

--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 ---
-title: Azi Apps
+title: Lior Azi
 ---
 
 <section class="hero diagonal">
 	<div class="container">
-		<h2 class="editable">We build mobile solutions</h2>
+		<h2 class="editable">Mobile solutions</h2>
 		<p class="subtext editable">Building innovative mobile solutions for your needs.</p>
 		<!-- <p><a class="button alt" href="{{ site.baseurl }}/contact/">Contact Us</a></p> -->
 	</div>
 </section>
 
-<section class="diagonal patterned">
+<!-- <section class="diagonal patterned">
 	<div class="container halves">
 		<div>
 			<h3 class="editable">Some of our work</h3>
@@ -25,7 +25,7 @@ title: Azi Apps
 			</ul>
 		</div>
 	</div>
-</section>
+</section> -->
 
 <section class="diagonal alternate">
 	<div class="container halves">
