added switchui logo

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ title: Lior Azi
 		<div>
 			<ul class="image-list">
 				<li><img src="{{ site.baseurl }}/images/xcode_logo.svg" width="200" style="margin-bottom: 40px;"></li>
-				<li><img src="{{ site.baseurl }}/images/ar_logo.png" width="150"></li>
+				<li><img src="{{ site.baseurl }}/images/switchui_logo.jpg" width="150"></li>
 			</ul>
 		</div>
 		<div>
