Update info.html to support dark mode

--- a/info.html
+++ b/info.html
@@ -1,17 +1,85 @@
+<!DOCTYPE html>
+<html dir="rtl">
+<head>
+    <meta charset="utf-8" />
+    <title>תקנות חנית נכים</title>
+    <meta content="תקנות חנית נכים" property="og:title" />
+    <meta content="width=device-width, initial-scale=1" name="viewport" />
+    <link href="https://liorazi.github.io/webflow.bce0a1d36.min.css" rel="stylesheet" type="text/css" />
+    <meta property="og:title" content="תג נכה" />
+    <meta property="og:description" content="תג נכה - בדיקת זכאות תג נכה למספר רכב" />
+    <style>
+        /* Light mode styles (default) */
+        body {
+            background-color: #ffffff;
+            color: #000000;
+            font-family: Arial, sans-serif;
+        }
 
-<!DOCTYPE html><html dir=rtl><head><meta charset="utf-8"/><title></title><meta content="תקנות חנית נכים" property="og:title"/><meta content="width=device-width, initial-scale=1" name="viewport"/><link href="https://liorazi.github.io/webflow.bce0a1d36.min.css" rel="stylesheet" type="text/css"/></script><meta property="og:title" content="תג נכה" />
-<meta property="og:description" content="תג נכה - בדיקת זכאות תג נכה למספר רכב" />
-</head><body><div class="container w-container"><div class="w-richtext"><h2>תקנות חנית נכים</h2>
+        a {
+            color: #007aff; /* iOS link blue */
+        }
 
-  מתוך ״תקנות התעבורה, תשכ"א-1961״:<p><p>
-  <strong>72.   (א)  לא יעצור אדם רכב, לא יעמידנו, לא יחנהו ולא ישאירנו עומד, כולו או חלק ממנו, באחד המקומות המנויים להלן, אלא לשם מניעת תאונה או לשם מילוי אחרי הוראה מהוראות תקנות אלה או אם סומן בתמרור אחרת; ואלה המקומות:<p>
-  …<p>
+        /* Dark mode styles */
+        @media (prefers-color-scheme: dark) {
+            body {
+                background-color: #1c1c1e;
+                color: #f5f5f7;
+            }
 
-  (16)  ליד תמרור 437 המסמן מקום חניה לרכב של נכה בעל תווית כבתמרור.</strong><p>
-<br>
-  מתוך ״צו התעבורה (עבירות קנס) תשע״א 2010״:<p><strong>
-עבירות לפי פקודת התעבורה:<p>
-סעיף 107. 72(א) (16) ה<p><br>
+            a {
+                color: #0a84ff; /* iOS link blue for dark mode */
+            }
+        }
 
-  סעיף 3: שיעורי הקנס:<p>
-  דרגת הקנס - ה׳ - 1,000 ש״ח<p></strong>
+        /* Additional container styling for better readability */
+        .container {
+            max-width: 800px;
+            margin: 0 auto;
+            padding: 20px;
+        }
+
+        h2 {
+            margin-top: 20px;
+            margin-bottom: 10px;
+        }
+
+        p {
+            line-height: 1.6;
+            margin-bottom: 10px;
+        }
+
+        strong {
+            font-weight: bold;
+        }
+    </style>
+</head>
+<body>
+    <div class="container w-container">
+        <div class="w-richtext">
+            <h2>תקנות חנית נכים</h2>
+            מתוך ״תקנות התעבורה, תשכ"א-1961״:
+            <p>
+                <strong>
+                    72.   (א)  לא יעצור אדם רכב, לא יעמידנו, לא יחנהו ולא ישאירנו עומד, כולו או חלק ממנו, באחד המקומות המנויים להלן, אלא לשם מניעת תאונה או לשם מילוי אחרי הוראה מהוראות תקנות אלה או אם סומן בתמרור אחרת; ואלה המקומות:
+                </strong>
+            </p>
+            <p>…</p>
+            <p>
+                <strong> (16)  ליד תמרור 437 המסמן מקום חניה לרכב של נכה בעל תווית כבתמרור. </strong>
+            </p>
+            <br />
+            מתוך ״צו התעבורה (עבירות קנס) תשע״א 2010״:
+            <p>
+                <strong>
+                    עבירות לפי פקודת התעבורה:
+                    <p>סעיף 107. 72(א) (16) ה</p>
+                    <br />
+                    סעיף 3: שיעורי הקנס:
+                    <p>דרגת הקנס - ה׳ - 1,000 ש״ח</p>
+                </strong>
+            </p>
+        </div>
+    </div>
+</body>
+</html>
