Color change for info.html

--- a/info.html
+++ b/info.html
@@ -23,7 +23,7 @@
         /* Dark mode styles */
         @media (prefers-color-scheme: dark) {
             body {
-                background-color: #1c1c1e;
+                background-color: #000000;
                 color: #f5f5f7;
             }
 
