Update instructions.html for dark mode

--- a/instructions.html
+++ b/instructions.html
@@ -1,22 +1,77 @@
 
-<!DOCTYPE html><html dir=rtl><head><meta charset="utf-8"/><title></title><meta content="רוצה לדווח, למי לפנות?" property="og:title"/><meta content="width=device-width, initial-scale=1" name="viewport"/><link href="https://liorazi.github.io/webflow.bce0a1d36.min.css" rel="stylesheet" type="text/css"/></script><meta property="og:title" content="תג נכה" />
-<meta property="og:description" content="תג נכה - בדיקת זכאות תג נכה למספר רכב" />
-</head><body><div class="container w-container"><div class="w-richtext"><h2>למי לפנות?</h2>
-<p>מצאת כי ישנו רכב אשר עומד/חונה במקום של חניית נכה, וזאת לאחר בדיקה דרך אפליקציית ״תג נכה״ כי למספר הרכב אין תג נכה בתוקף.<p>
-לצורך דווח על המקרה ישנן מספר דרכי פעולה אפשריות:<p>
-  אפשרות א׳: פנה למוקד העירוני בעירך - ברוב הערים מספרו <a href="tel:106">106</a>
-  למעט: רמת גן - <a href="tel:109">109</a>, גבעתיים/בת-ים - <a href="tel:107">107</a><p>
-      אפשרות ב׳: פנה למשטרה - <a href="tel:100">מוקד 100</a><p>
+<!DOCTYPE html>
+<html dir="rtl">
+<head>
+    <meta charset="utf-8" />
+    <title></title>
+    <meta content="רוצה לדווח, למי לפנות?" property="og:title" />
+    <meta content="width=device-width, initial-scale=1" name="viewport" />
+    <link href="https://liorazi.github.io/webflow.bce0a1d36.min.css" rel="stylesheet" type="text/css" />
+    <meta property="og:title" content="תג נכה" />
+    <meta property="og:description" content="תג נכה - בדיקת זכאות תג נכה למספר רכב" />
+    <style>
+        /* Light mode styles (default) */
+        body {
+            background-color: #ffffff;
+            color: #000000;
+            font-family: Arial, sans-serif;
+        }
+        a {
+            color: #007bff;
+        }
 
-יתכן ותתבקש לספק את הפרטים הבאים:<p>
-<p>•  יצרן הרכב
-<p>•  מודל הרכב
-<p>•  צבע הרכב
-<p>•  מיקום מדויק
-<p>•  תאריך ושעה
-<p>•  תמונה של הרכב חונה בחניית הנכים
-<p>
-<p> בפנייתך רצוי לציין כי בדקת את מספר הרכב מול מאגר הנתונים של משרד התחבורה
-וכי חנית הנכים תפוסה שלא כדין
-<p><h3><strong>חשוב לדעת!</strong></h3>
-<p>על פי החוק אסורה העמדת רכב שאינו בעל תג נכה בתוקף בחניית נכה אפילו לזמן קצר, קל וחומר החניה בו.<p>
+        /* Dark mode styles */
+        @media (prefers-color-scheme: dark) {
+            body {
+                background-color: #000000;
+                color: #ffffff;
+            }
+            a {
+                color: #4dabf7;
+            }
+        }
+
+        /* Additional shared styles for both modes */
+        h2, h3 {
+            margin-top: 1rem;
+        }
+        p {
+            line-height: 1.5;
+            margin-bottom: 1rem;
+        }
+    </style>
+</head>
+<body>
+    <div class="container w-container">
+        <div class="w-richtext">
+            <h2>למי לפנות?</h2>
+            <p>מצאת כי ישנו רכב אשר עומד/חונה במקום של חניית נכה, וזאת לאחר בדיקה דרך אפליקציית ״תג נכה״ כי למספר הרכב אין תג נכה בתוקף.</p>
+            <p>לצורך דווח על המקרה ישנן מספר דרכי פעולה אפשריות:</p>
+            <p>
+                אפשרות א׳: פנה למוקד העירוני בעירך - ברוב הערים מספרו <a href="tel:106">106</a>
+                למעט: רמת גן - <a href="tel:109">109</a>, גבעתיים/בת-ים - <a href="tel:107">107</a>
+            </p>
+            <p>
+                אפשרות ב׳: פנה למשטרה - <a href="tel:100">מוקד 100</a>
+            </p>
+            <p>יתכן ותתבקש לספק את הפרטים הבאים:</p>
+            <ul>
+                <li>יצרן הרכב</li>
+                <li>מודל הרכב</li>
+                <li>צבע הרכב</li>
+                <li>מיקום מדויק</li>
+                <li>תאריך ושעה</li>
+                <li>תמונה של הרכב חונה בחניית הנכים</li>
+            </ul>
+            <p>
+                בפנייתך רצוי לציין כי בדקת את מספר הרכב מול מאגר הנתונים של משרד התחבורה
+                וכי חנית הנכים תפוסה שלא כדין
+            </p>
+            <h3><strong>חשוב לדעת!</strong></h3>
+            <p>
+                על פי החוק אסורה העמדת רכב שאינו בעל תג נכה בתוקף בחניית נכה אפילו לזמן קצר, קל וחומר החניה בו.
+            </p>
+        </div>
+    </div>
+</body>
+</html>
