Update privacy.html for dark mode

--- a/privacy.html
+++ b/privacy.html
@@ -1,17 +1,58 @@
+<!DOCTYPE html>
+<html dir="rtl">
+<head>
+    <meta charset="utf-8" />
+    <title></title>
+    <meta content="מדיניות פרטיות" property="og:title" />
+    <meta content="width=device-width, initial-scale=1" name="viewport" />
+    <link href="https://liorazi.github.io/webflow.bce0a1d36.min.css" rel="stylesheet" type="text/css" />
+    <meta property="og:title" content="תג נכה" />
+    <meta property="og:description" content="תג נכה - בדיקת זכאות תג נכה למספר רכב" />
 
-<!DOCTYPE html><html dir="rtl" ><head><meta charset="utf-8"/><title></title><meta content="מדיניות פרטיות" property="og:title"/><meta content="width=device-width, initial-scale=1" name="viewport"/><link href="https://liorazi.github.io/webflow.bce0a1d36.min.css" rel="stylesheet" type="text/css"/></script><meta property="og:title" content="תג נכה" />
-<meta property="og:description" content="תג נכה - בדיקת זכאות תג נכה למספר רכב" />
-</head><body><div class="container w-container"><div class="w-richtext"><h2>מדיניות פרטיות</h2><p><strong>עודכן לאחרונה: 6 לאוקטובר, 2018</strong></p><p><br><strong>1. מדיניות הפרטיות של תג נכה</strong>
-<p>1.1 תג נכה (להלן: “אנו” או “אנחנו”) מחויבת להגן ולכבד את פרטיותך, כמשתמש, מתקשר, מבקר או המוסר מידע לתג נכה.
-<p>1.2 תג נכה מכירה בחשיבות המידע האישי שלך ובאחריות המוטלת עליה ממסירת המידע האישי על ידך. מדיניות פרטיות זו (להלן: “מדיניות הפרטיות”) מפרטת את האופן בו תשתמש תג נכה במידע האישי שלך, הן באופן פעיל והן באופן פאסיבי, במסגרת שימושך באפליקציה הסלולרית של תג נכה (להלן: “האפליקציה”). במדיניות זו (יחד עם תנאי השימוש של תג נכה ומסמכים אחרים הנזכרים בהם) מבקשת תג נכה לקבוע את הבסיס לעיבוד כל מידע אישי שנאסף ממך, מנציגך או מעסיקך, או מידע אותו תמסור לתג נכה, לרבות מהו המידע אותו היא רשאית לאסוף באמצעות אתר האינטרנט ו/או האפליקציה, באיזה אופן ישמש המידע, אופן גילוי המידע שנמסר על ידך לצדדים שלישיים והשימוש ב-“עוגיות” או בקבצים או תגיות באתר האינטרנט ובאפליקציה.
-<p>1.3 תג נכה מחויבת להגן על המידע האישי שלך (כהגדרתו להלן) באופן העולה בקנה אחד עם חוקי הגנת המידע התקפים. נבקשך לקרוא בעיון את מדיניות זו ולהבין את עמדותיה ונהליה של תג נכה בנוגע למידע האישי שלך ולאופן שבו תנהג בו תג נכה.
-<p>1.4 תנאי מדיניות הפרטיות המפורטים בלשון זכר הינם לשם נוחיות בלבד והיא מיועדת לשני המינים כאחד.
-<p><strong>2. אישור המדיניות על ידי המשתמש</strong><p>
-שימושך בשירותי תג נכה (להלן: “השירותים”) או רישום, הורדת מידע או כניסה ל לאפליקציה, מהווים אישור מצדך כי ידועים לך או שניתנה אפשרות לקרוא את מדיניות הפרטיות ואת נהלי תג נכה המפורטים בה, לרבות עיבוד (כולל איסוף, שימוש, גילוי, החזקה או העברה) של מידע על פי תנאי מדיניות זו. המידע המוחזק בידי תג נכה אודותיך עשוי להיות מוחזק ומעובד באמצעות קבצי מחשב ו/או במסמכים בכתב.
-במידה שתמסור לתג נכה כל מידע אודות אדם אחר, עליך להפנות את תשומת לבו של אדם זה כאמור למדיניות פרטיות זו.
-<p><strong>3. סוגי המידע הנאסף</strong>
-<p>3.1.1 תג נכה איננה אוספת כל “מידע אישי” או “מידע אנונימי” אודות משתמשים ומבקרים. מידע אישי הנו מידע שניתן לעשות בו שימוש על מנת לתקשר עמך או לזהותך, כגון שם מלא, כתובת דוא”ל, מספר טלפון, פרטי צורת התשלום, שם משתמש, סיסמה, כתובת דואר, כתובת IP ותמונת פרופיל, וכן מידע המקושר למידע כאמור. “מידע אנונימי” הנו מידע שאינו מאפשר לנו לפנות אליך או לזהותך, ואינו קשור למידע שניתן להשתמש בו לצורך כך. מידע זה כולל מידע שנאסף באופן פאסיבי על פעילותך באתר האינטרנט או באפליקציה, כגון נתוני שימוש (usage data), במידה שמידע כאמור אינו מקושר למידע האישי שלך.
-<p>3.1.2 מידע הנמסר מרצון -<p>
-מידע הנמסר לנו מיוזמתך במהלך שימושך באפליקציה איננו נאסף על ידינו.
-<p><strong>4. שינויים במדיניות הפרטיות של תג נכה</strong><p>
-תג נכה רשאית לשנות את מדיניות הפרטיות מעת לעת. כל שינויים עתידיים במדיניות הפרטיות יפורסמו בדף זה, ואם תראה תג נכה לנכון, יימסרו לך בהודעה. לפיכך, עליך לבדוק כל שינויים במדיניות הפרטיות לפני שתמסור לתג נכה מידע אישי. תאריך הגרסה העדכנית יופיע בעמוד זה.
+    <!-- Dark Mode CSS -->
+    <style>
+        /* Default light mode styles */
+        body {
+            background-color: white;
+            color: black;
+        }
+
+        h2, h3, p {
+            color: black;
+        }
+
+        /* Dark mode styles */
+        @media (prefers-color-scheme: dark) {
+            body {
+                background-color: black;
+                color: white;
+            }
+
+            h2, h3, p {
+                color: white;
+            }
+
+            a {
+                color: #007AFF; /* Light blue for links in dark mode */
+            }
+        }
+    </style>
+</head>
+<body>
+    <div class="container w-container">
+        <div class="w-richtext">
+            <h2>מדיניות פרטיות</h2>
+            <p><strong>עודכן לאחרונה: 6 לאוקטובר, 2018</strong></p>
+            <p><br><strong>1. מדיניות הפרטיות של תג נכה</strong></p>
+            <p>1.1 תג נכה (להלן: “אנו” או “אנחנו”) מחויבת להגן ולכבד את פרטיותך, כמשתמש, מתקשר, מבקר או המוסר מידע לתג נכה.</p>
+            <p>1.2 תג נכה מכירה בחשיבות המידע האישי שלך ובאחריות המוטלת עליה ממסירת המידע האישי על ידך...</p>
+            <p><strong>2. אישור המדיניות על ידי המשתמש</strong></p>
+            <p>שימושך בשירותי תג נכה (להלן: “השירותים”) או רישום, הורדת מידע או כניסה ל אפליקציה...</p>
+            <p><strong>3. סוגי המידע הנאסף</strong></p>
+            <p>3.1.1 תג נכה איננה אוספת כל “מידע אישי” או “מידע אנונימי” אודות משתמשים ומבקרים...</p>
+            <p><strong>4. שינויים במדיניות הפרטיות של תג נכה</strong></p>
+            <p>תג נכה רשאית לשנות את מדיניות הפרטיות מעת לעת...</p>
+        </div>
+    </div>
+</body>
+</html>
