--- a/instructions.html
+++ b/instructions.html
@@ -17,7 +17,7 @@
             font-family: Arial, sans-serif;
         }
         a {
-            color: #007bff;
+            color: #007AFF;
         }
 
         /* Dark mode styles */
