--- a/acknowledgements.html
+++ b/acknowledgements.html
@@ -1,7 +1,29 @@
 
 <!DOCTYPE html><html><head><meta charset="utf-8"/><title></title><meta content="Acknowledgments" property="og:title"/><meta content="width=device-width, initial-scale=1" name="viewport"/><link href="https://liorazi.github.io/webflow.bce0a1d36.min.css" rel="stylesheet" type="text/css"/></script><meta property="og:title" content="תג נכה" />
 <meta property="og:description" content="תג נכה - בדיקת זכאות תג נכה למספר רכב" />
-</head><body><div class="container w-container"><div class="w-richtext"><h2>Acknowledgments</h2><p><strong>Last updated: Oct 25, 2018</strong></p><p><br>Portions of this software may utilize the following copyrighted material, the use of which is hereby acknowledged:</p>
+</head><body>
+  <style>
+          /* Light Mode Styles */
+          body {
+              background-color: #fff;
+              color: #000;
+          }
+          h2 {
+              color: #333;
+          }
+
+          /* Dark Mode Styles */
+          @media (prefers-color-scheme: dark) {
+              body {
+                  background-color: black;
+                  color: white;
+              }
+              h2 {
+                  color: #fff;
+              }
+          }
+      </style>
+  <div class="container w-container"><div class="w-richtext"><h2>Acknowledgments</h2><p><strong>Last updated: Oct 25, 2018</strong></p><p><br>Portions of this software may utilize the following copyrighted material, the use of which is hereby acknowledged:</p>
 <p><p><strong>DINRundschriftBreit Font</strong> <br>SIL OPEN FONT LICENSE
 <p>
 (c) Robert Jablonski/Cannot Into Space Fonts, All Rights Reserved.
@@ -191,6 +213,28 @@ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
 LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
 OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
 THE SOFTWARE.<p>
+
+  MIT License
+
+Copyright (c) 2022-2024 Daniel Saidi
+
+Permission is hereby granted, free of charge, to any person obtaining a copy
+of this software and associated documentation files (the "Software"), to deal
+in the Software without restriction, including without limitation the rights
+to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
+copies of the Software, and to permit persons to whom the Software is
+furnished to do so, subject to the following conditions:
+
+The above copyright notice and this permission notice shall be included in all
+copies or substantial portions of the Software.
+
+THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
+IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
+FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
+AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
+LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
+OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
+SOFTWARE.
   <p><strong>Cache</strong> <br>Licensed under the MIT license
   <p>
     Copyright (c) 2015 Hyper Interaktiv AS
