More updates to the html files

--- a/acknowledgements.html
+++ b/acknowledgements.html
@@ -11,6 +11,9 @@
           h2 {
               color: #333;
           }
+          a {
+              color: #007AFF;
+          }
 
           /* Dark Mode Styles */
           @media (prefers-color-scheme: dark) {
@@ -20,6 +23,9 @@
               }
               h2 {
                   color: #fff;
+              }
+              a {
+                  color: #007AFF;
               }
           }
       </style>
