--- a/instructions.html
+++ b/instructions.html
@@ -27,7 +27,7 @@
                 color: #ffffff;
             }
             a {
-                color: #4dabf7;
+                color: #007AFF;
             }
         }
 
