Update to info html with content

--- a/info.html
+++ b/info.html
@@ -61,12 +61,59 @@
             מתוך ״תקנות התעבורה, תשכ"א-1961״:
             <p>
                 <strong>
-                    72.   (א)  לא יעצור אדם רכב, לא יעמידנו, לא יחנהו ולא ישאירנו עומד, כולו או חלק ממנו, באחד המקומות המנויים להלן, אלא לשם מניעת תאונה או לשם מילוי אחרי הוראה מהוראות תקנות אלה או אם סומן בתמרור אחרת; ואלה המקומות:
+                    72. (א) לא יעצור אדם רכב, לא יעמידנו, לא יחנהו ולא ישאירנו עומד, כולו או חלק ממנו, באחד המקומות המנויים להלן, אלא לשם מניעת תאונה או לשם מילוי אחרי הוראה מהוראות תקנות אלה או אם סומן בתמרור אחרת; ואלה המקומות:
                 </strong>
             </p>
-            <p>…</p>
             <p>
-                <strong> (16)  ליד תמרור 437 המסמן מקום חניה לרכב של נכה בעל תווית כבתמרור. </strong>
+                <strong>(1) בצד שמאל של הדרך אלא אם הכביש הוא חד-סטרי, או בניגוד לכיוון הנסיעה; לענין תקנת משנה זו לא יראו בכביש חד-סטרי כביש שהוא חלק מדרך המחולקת על ידי שטח הפרדה;</strong>
+            </p>
+            <p>
+                <strong>(2) על שביל אופניים מסומן בתמרור, ובלבד שמותר לעצור אופניים, להעמידם או להחנותם במדרכה או בשביל כאמור אם אין בכך הפרעה לתנועה;</strong>
+            </p>
+            <p>
+                <strong>(2א) על מדרכה, למעט במקום שהוסדר להעמדת רכב והחנייתו לפי חוק עזר שהותקן על פי סעיף 77 לפקודה ובלבד שנותר מעבר להולכי רגל;</strong>
+            </p>
+            <p>
+                <strong>(2ב) בדרך שהוצב לפניה תמרור 401;</strong>
+            </p>
+            <p>
+                <strong>(3) בתוך צומת או בתחום שנים עשר מטר ממנו, פרט לקטע שסימנה רשות תימרור, בתמרור או בסימון על אבני השפה, שמותר לחנות בו;</strong>
+            </p>
+            <p>
+                <strong>(4) במקום כניסה לשטח המיועד לכלי רכב, פרט להעלאת נוסעים והורדתם;</strong>
+            </p>
+            <p>
+                <strong>(6) בתוך מעבר חציה או בתחום שנים עשר מטר לפניו;</strong>
+            </p>
+            <p>
+                <strong>(7) בתחום שנים עשר מטר לפני קו עצירה;</strong>
+            </p>
+            <p>
+                <strong>(8) בתחום הדרך מעשרים מטרים מהפס הקרוב ביותר של מפגש מסילת הברזל עד עשרים מטרים אחרי המפגש;</strong>
+            </p>
+            <p>
+                <strong>(9) בכביש, לרבות שולי הדרך, שבו קיים בכיוון הנסיעה נתיב אחד בלבד המסומן בקו הפרדה בלתי מרוסק;</strong>
+            </p>
+            <p>
+                <strong>(10) בצד רכב אחר העומד או חונה בצדו של הדרך;</strong>
+            </p>
+            <p>
+                <strong>(11) על גשר או בתוך מנהרה או בתחום 50 מטרים לפניה או לאחריה;</strong>
+            </p>
+            <p>
+                <strong>(12) בנתיב שיועד לתחבורה ציבורית ובתחום תחנת אוטובוסים המוגדרת על ידי סימון על פני כביש, ובאין סימון כאמור - בתוך עשרים מטר לפני תמרור "תחנת אוטובוסים" ועשרים מטר אחריו, בשני צדי הדרך; ובלבד שמותר לעצור או להעמיד או להחנות רכב בצד הדרך שממול לסימון על פני הכביש או ממול לתמרור, אם רוחב הכביש באותו מקום הוא שנים עשר מטר או יותר;</strong>
+            </p>
+            <p>
+                <strong>(13) בצד מעקה בטיחות להולכי רגל בשפת הכביש, אלא אם תמרור מורה אחרת;</strong>
+            </p>
+            <p>
+                <strong>(14) בתוך תחום תחנת מוניות המסומנת בתמרור שהוצב או סומן, פרט לעצירה לשם העלאת או הורדת נוסעים;</strong>
+            </p>
+            <p>
+                <strong>(15) ליד תמרור המסמן תחנת הסעה לחיילים, אלא לשם העלאת חיילים והורדתם;</strong>
+            </p>
+            <p>
+                <strong>(16) ליד תמרור 437 המסמן מקום חניה לרכב של נכה בעל תווית כבתמרור.</strong>
             </p>
             <br />
             מתוך ״צו התעבורה (עבירות קנס) תשע״א 2010״:
