--- a/acknowledgements.html
+++ b/acknowledgements.html
@@ -220,7 +220,7 @@ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
 OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
 THE SOFTWARE.<p>
 
-  MIT License
+<p><strong>WebViewKit</strong> <br>MIT License
 
 Copyright (c) 2022-2024 Daniel Saidi
 
