--- a/tos.html
+++ b/tos.html
@@ -50,7 +50,7 @@
     <div class="container w-container">
         <div class="w-richtext">
             <h2>תנאי שימוש</h2>
-            <p><strong>עודכן לאחרונה: 6 לאוקטובר, 2018</strong></p>
+            <p><strong>עודכן לאחרונה: 9 לפברואר, 2025</strong></p>
             <strong>
                 עצם הורדת האפליקציה ו/או השימוש בשירות באמצעות האפליקציה מעיד על הסכמתך לתנאים המפורטים במסמך זה אם אינך מסכימ/ה לאילו מתנאי השימוש הנך מתבקש/ת להימנע מלעשות כל שימוש באפליקציה.
                 תנאי שימוש אלה יחולו על כל שימוש שהוא שיעשה בתחומי מדינת ישראל על ידך, המשתמש/ת (כהגדרתו להלן), והם מהווים הסכם משפטי מחייב בינך ובין מי מטעמך לבין החברה.
