--- a/privacy.html
+++ b/privacy.html
@@ -42,7 +42,7 @@
     <div class="container w-container">
         <div class="w-richtext">
             <h2>מדיניות פרטיות</h2>
-            <p><strong>עודכן לאחרונה: 6 לאוקטובר, 2018</strong></p>
+            <p><strong>עודכן לאחרונה: 9 לפברואר, 2025</strong></p>
             <p><br><strong>1. מדיניות הפרטיות של תג נכה</strong></p>
             <p>1.1 תג נכה (להלן: “אנו” או “אנחנו”) מחויבת להגן ולכבד את פרטיותך, כמשתמש, מתקשר, מבקר או המוסר מידע לתג נכה.
 <p>1.2 תג נכה מכירה בחשיבות המידע האישי שלך ובאחריות המוטלת עליה ממסירת המידע האישי על ידך. מדיניות פרטיות זו (להלן: “מדיניות הפרטיות”) מפרטת את האופן בו תשתמש תג נכה במידע האישי שלך, הן באופן פעיל והן באופן פאסיבי, במסגרת שימושך באפליקציה הסלולרית של תג נכה (להלן: “האפליקציה”). במדיניות זו (יחד עם תנאי השימוש של תג נכה ומסמכים אחרים הנזכרים בהם) מבקשת תג נכה לקבוע את הבסיס לעיבוד כל מידע אישי שנאסף ממך, מנציגך או מעסיקך, או מידע אותו תמסור לתג נכה, לרבות מהו המידע אותו היא רשאית לאסוף באמצעות אתר האינטרנט ו/או האפליקציה, באיזה אופן ישמש המידע, אופן גילוי המידע שנמסר על ידך לצדדים שלישיים והשימוש ב-“עוגיות” או בקבצים או תגיות באתר האינטרנט ובאפליקציה.
